--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,13 +7,11 @@ rest:
       url: https://api.opsgenie.com/v2/alerts
       auth-request-id: GenieKey ${GENIE_KEY}
       team-id: ${TEAM_ID}
-#      auth-request-id: ${GENIE_KEY}
-#      team-id: 94950924-6be6-4ccb-ac88-1c3232ed1d3d
 
 spring:
   kafka:
     consumer:
-      group-id: default
+      group-id: second_group
 
 topic:
   name: frames
