listen alert-topic from well manager

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,6 +12,5 @@ spring:
   kafka:
     consumer:
       group-id: second_group
-
-topic:
-  name: frames
+    topic:
+      alert-topic: alert_frames
